Conected appointmentcontroller and appthandler, along with fixing issues regarding appointment and patient DAO